[package]
name = "nml-matrix"
description = "A small library to work with matrices."
version = "0.4.1"
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/p0l19/nml-matrix"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
rand = "0.8.5"
